--- a/API/Custo0/Custo0.csproj
+++ b/API/Custo0/Custo0.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Assets\produto\" />
     <Folder Include="Assets\Perfil\" />
     <Folder Include="Contexts\" />
   </ItemGroup>
